# autoproj

./: Makefile.am  README  configure.ac  hello.c
commonstat/: Makefile.am  commonstat.h  print.c
include/: Makefile.am  projdyn1.h  projdyn2.h
libprojdyn1/: Makefile.am  proj_print.c
libprojdyn2/: Makefile.am  proj_print.c
programs/: Makefile.am  hello.c  module.h
programs/modules/hithere/: hithere.c
